deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: forward-auth
  name: forward-auth
  namespace: traefik-auth
spec:
  replicas: 1
  selector:
    matchLabels:
      app: forward-auth
  template:
    metadata:
      labels:
        app: forward-auth
    spec:
      containers:
        - name: traefik-forward-auth
          image: thomseddon/traefik-forward-auth:2
          ports:
            - containerPort: 4181
              protocol: TCP
          livenessProbe:
            tcpSocket:
              port: 4181
            initialDelaySeconds: 20
            failureThreshold: 3
            successThreshold: 1
            periodSeconds: 10
            timeoutSeconds: 2
