service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: forward-auth
  namespace: traefik-auth
  labels:
    app: traefik
spec:
  type: ClusterIP
  selector:
    app: forward-auth
  ports:
  - name: auth-http
    port: 4181
    targetPort: 4181
